# api-market-data

./: .gitignore  README.md  pyproject.toml  test_data.toml
src/: database_manager.py  marketstack.py  marketstack_api.toml  populate_test_database.py  st_market_data.py
test/: README.md  test_cached_data.py  test_database_manager.py  test_marketstack_client.py  test_url_validation.py
